# breadcli

./: .gitignore  README.md  core.md  current_state.txt  docs.md  main.py  pyproject.toml
src/bread/: parser.py
src/bread/app/: commands.py  controller.py  state.py
src/bread/domain/: ir.py  model.py
src/bread/engines/: core.py  linewrap.py  normal_adapter.py  rsvp.py
src/bread/models/: core.py  epub.py
src/bread/parsing/: __init__.py  html_to_ir.py
src/bread/ui/: app.py
src/bread/ui/screens/: normal.py  rsvp.py
src/bread/ui/views/: core.py  line_view.py  rsvp.py
tests/: test_controller.py  test_parser.py  test_reader_intergration.py
